[metadata]
name = botoven
version = 0.0.1
description = Le bot musique de botovenn
author = Pikatsuto

[options]
packages =
    botoven
    botoven.core
    botoven.music_apis
install_requires =
    nextcord
    python-dotenv
    youtube_dl
    PyNaCl
    psutil
    embed_templator @ git+https://github.com/Pikatsuto/Embed-Templator-nextcord@main
python_requires = > 3.8
zip_safe = no